--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,35 @@
     justify-content: center;
     align-items: center;
 }
+
+.logo {
+    width: 242px;
+    height: 57px;
+    position: fixed;
+    left: 60px;
+    top: 60px;
+
+}
+
+.nav {
+    position: fixed;
+    top: 70px;
+    right: 120px;
+    z-index: 3
+}
+
+.nav ul li {
+    display: inline-block;
+    padding-left: 30px;
+    color: #ffa178;
+    font-weight: 400;
+    cursor: point;
+}
+
+.release {
+    width: 100px;
+    transform: rotate(-90deg);
+    position: fixed;
+    top: 200px;
+    left: 300px;
+}
