--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,79 @@
 .date-list li:hover h3::before {
     width: 30px;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+}
+
+.section {
+    width: 100%;
+    height: 75vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.one {
+    margin-top: 6%;
+    background: url(../img/destiny-bg.png) no-repeat center;
+    background-size: contain;
+    z-index: -2;
+}
+
+.two {
+    background: url(../img/resident-bg.png) no-repeat center;
+    background-size: contain;
+    z-index: -2;
+}
+
+.three {
+    margin-bottom: 6%;
+    background: url(../img/assassins-bg.png) no-repeat center;
+    background-size: contain;
+    z-index: -2;
+}
+
+.card {
+    width: 720px;
+    height: 405px;
+    position: relative;
+}
+
+.card-role {
+    width: 720px;
+    height: 405px;
+    position: relative;
+    z-index: 2;
+}
+
+.card-role img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-bg {
+    width: 720px;
+    height: 405px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 30px;
+}
+
+.first {
+    background: url(../img/destiny-card.png);
+    background-size: cover;
+}
+
+.second {
+    background: url(../img/resident-card.png);
+    background-size: cover;
+}
+
+.third {
+    background: url(../img/assassins-card.png);
+    background-size: cover;
+}
