--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@
 }
 
 .two {
+
     background: url(../img/resident-bg.png) no-repeat center;
     background-size: contain;
     z-index: -2;
@@ -178,7 +179,7 @@
     background-size: cover;
 }
 
-.second {
+.sec {
     background: url(../img/resident-card.png);
     background-size: cover;
 }
@@ -186,4 +187,74 @@
 .third {
     background: url(../img/assassins-card.png);
     background-size: cover;
+}
+
+.time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: -250px;
+}
+
+.time h1 {
+    font-size: 80px;
+    font-weight: 300;
+}
+
+.time span {
+    display: block;
+    transform: rotate(-90deg);
+    color: #ffa178;
+}
+
+.des {
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    left: -80px;
+    z-index: 2;
+}
+
+.des h3 {
+    font-size: 42px;
+    padding-bottom: 20px;
+    width: 55%;
+    font-weight: 400;
+
+}
+
+.des p {
+    font-size: 18px;
+    font-weight: 200;
+    letter-spacing: 2px;
+    color: rgba(255, 255, 255, .5);
+}
+
+.btn {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #ffa178;
+    border-radius: 50%;
+    padding: 50px;
+    position: absolute;
+    top: 50%;
+    right: -50px;
+    transform: translateY(-50%);
+}
+
+.btn a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.btn h3 {
+    font-size: 32px;
+    font-weight: 400;
+}
+
+.btn:hover {
+    background-color: #ffa178;
 }
